OC  = OpenCart (alle ondersteunde versies)
OC1 = OpenCart 1
OC2 = OpenCart 2 (OC21, OC22, OC23 = specifieke minor versie binnen major versie 2)
OC3 = OpenCart 3
PS  = PrestaShop
VM3 = VirtueMart3 (Joomla)
WC  = WooCommerce (WordPress) (alle ondersteunde versies)
WC2 = WooCommerce 2 (WordPress)
WC3 = WooCommerce 3 (WordPress)

5.4.4 (2018-06-05)
------------------
- WC: Styling van popup-help in het statusoverzicht op bestellingpagina.
- WC2: Fatal error: Uncaught Error: Call to a member function get_items() on
  null in Creator.
- WC2: Fatal error: Uncaught Error: Call to undefined method
  WC_Order_Refund::get_parent_id() in Source.
- WC2: Fatal error: Uncaught RuntimeException: Source::getPaymentMethodOrder()
  not implemented for Source.

5.4.3 (2018-05-31)
------------------
- ALL: feature: added support for costprice setting in all plugins, was only for
  WooCommerce and, not completely correct, PrestaShop.
- ALL: feature: removed invoice setting useMargin in favor of shop setting
  marginProducts.
- ALL: feature: based on the new settings, the code to determine the vat type
  and any warning to give when no vat type could be determined, has been
  improved.
- ALL: feature: Added configuration settings to determine the nature of the
  products in the catalog and if goods are sold using the margin scheme. These
  settings are used to fill in the nature tag and to better determine the vat
  type.
- ALL: bug: validation between send customer and email invoice as pdf on
  advanced config could go wrong.
- WC: bug Rendering of invoice and packing slip contained errors possibly
  leading to 2 pdf icons before the invoice.
- ALL: bug: Warning: strpos() expects parameter 1 to be string, array given in
  Config.php on line 1129/1155.

5.4.2 (2018-05-15)
------------------
- WC: typo in css class is-dismissible on messages.
- WC: Op een bestellingpagina in de backend wordt nu een statusoverzicht getoond